# OLXscrapingCORSAIR

./: README.md  data.json  main.py  pyproject.toml
htmls/: index_1.html  index_10.html  index_11.html  index_12.html  index_13.html  index_14.html  index_15.html  index_16.html  index_17.html  index_18.html  index_19.html  index_2.html  index_20.html  index_21.html  index_22.html  index_23.html  index_24.html  index_25.html  index_3.html  index_4.html  index_5.html  index_6.html  index_7.html  index_8.html  index_9.html
