[tool.poetry]
name = "olxscrapingcorsair"
version = "0.1.0"
description = ""
authors = ["Zabutnij Yurij <zabutniy10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
